---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: ????
  Bugfixes:
    - Fixed that rejected confirm with E was still closing the edit task GUI
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 2021-12-04
  Bugfixes:
    - Fixed the edit task GUI not closing if you click the confirm button
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 2021-12-01
  Bugfixes:
    - Fixed that the tasks GUI would close if you used E to confirm the edit task GUI
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 2021-11-27
  Changes:
    - Updated Russian locale (#4) (credit to Astorin)
  Bugfixes:
    - Fixed player tasks being left behind if a player was removed
    - Fixed the edit description textbox not wrapping (#5)
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2021-11-13
  Features:
    - Added task status, which can be one of `not started`, `in progress`, `paused` and `blocked`
      - Status can be adjusted in the edit task dialog, or by clicking the status icon in the tasks GUI
    - Added shortcut and hotkey to create a new task
      - Hotkey is not bound by default
  Changes:
    - Descriptions are a lot less disruptive now
  Bugfixes:
    - Fixed edit task GUI width when the parent task has a very long name
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2021-11-11
  Features:
    - Initial release